After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 564766 - File size should not be displayed under network icons
File size should not be displayed under network icons
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: Icon View
2.24.x
Other Linux
: Normal trivial
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 109642 (view as bug list)
Depends on: 682376
Blocks:
 
 
Reported: 2008-12-16 18:15 UTC by Siegfried Gevatter (RainCT)
Modified: 2012-09-10 13:02 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
screenshot (51.22 KB, image/png)
2012-08-21 15:44 UTC, William Jon McCann
  Details
Don't show "--" for unknown sizes just use a blank. (931 bytes, patch)
2012-08-21 17:08 UTC, William Jon McCann
reviewed Details | Review
Don't show captions that make no sense (1.17 KB, patch)
2012-08-21 17:08 UTC, William Jon McCann
reviewed Details | Review
Don't show captions that make no sense (1.09 KB, patch)
2012-08-21 20:42 UTC, William Jon McCann
committed Details | Review

Description Siegfried Gevatter (RainCT) 2008-12-16 18:15:39 UTC
Go to Places -> Network and increase the zoom to 150% or higher (or, alternatively, move "size" before "none" in the /apps/nautilus/icon_view/caption gconf entry) and notice that "0 bytes" is displayed below the name of each connection. This information should be hidden, as it is not relevant here.
Comment 1 William Jon McCann 2012-08-21 15:44:40 UTC
Created attachment 222039 [details]
screenshot
Comment 2 William Jon McCann 2012-08-21 17:08:45 UTC
Created attachment 222052 [details] [review]
Don't show "--" for unknown sizes just use a blank.
Comment 3 William Jon McCann 2012-08-21 17:08:48 UTC
Created attachment 222053 [details] [review]
Don't show captions that make no sense
Comment 4 Cosimo Cecchi 2012-08-21 19:55:46 UTC
Review of attachment 222053 [details] [review]:

::: src/nautilus-canvas-view-container.c
@@ +374,3 @@
 		}
+		text = nautilus_file_get_string_attribute_with_default_q (file, attributes[i]);
+		if (text == NULL || text[0] == '\0' || strcmp (text, _("unknown")) == 0) {

Relying on the translation of this string to be the same as the one in nautilus-file.c seems a little weak; at least, there should be a translator's comment both here and in the matching string in nautilus-file.c insisting the two strings should be translated identically.

On the other hand, NautilusFile also has a nautilus_file_get_string_attribute() function, that avoids the "unknown" strings fallbacks. Maybe it would be a better choice to use that function here instead?
Comment 5 Cosimo Cecchi 2012-08-21 19:56:35 UTC
Review of attachment 222052 [details] [review]:

Looks good, but if we can do what I suggested in the previous comment, this might be unnecessary.
Comment 6 William Jon McCann 2012-08-21 20:42:44 UTC
Created attachment 222076 [details] [review]
Don't show captions that make no sense
Comment 7 Cosimo Cecchi 2012-08-22 09:34:22 UTC
Review of attachment 222076 [details] [review]:

Looks good.
Comment 8 William Jon McCann 2012-09-10 13:02:03 UTC
*** Bug 109642 has been marked as a duplicate of this bug. ***