Don't show captions that make no sense

https://bugzilla.gnome.org/show_bug.cgi?id=564766